More markup around JB's container for correct height calculation.
JB's height calculation was slightly messed up after we moved the toolbar
around recently.

--- a/www/styles/curate.less
+++ b/www/styles/curate.less
@@ -19,7 +19,16 @@
   padding: 0px;
 }
 
+.editor {
+  display: table;
+  width: 100%;
+  height: 100%;
+  border-collapse: collapse;
+}
+
 .topbar {
+  display: table-row;
+  height: 0;
   background: white;
   border-bottom: 1px solid #ddd;
   text-align: right;
@@ -32,6 +41,11 @@
 .topbar > .toolbar > .btn {
   border-color: transparent;
   border-radius: 0px;
+}
+
+.buffer {
+  display: table-row;
+  height: 100%;
 }
 
 #genome {
